VXIPNP/WinNT/include/age1960.h



    ViStatus _VI_FUNC age1960_timeOut_Q
    (ViSession  instrumentHandle,
     ViPInt32   timeOut);


    ViStatus _VI_FUNC age1960_errorQueryDetect
    (ViSession  instrumentHandle,
     ViBoolean  setErrorQueryDetect);


    ViStatus _VI_FUNC age1960_errorQueryDetect_Q
    (ViSession  instrumentHandle,
     ViPBoolean errorQueryDetect);


    ViStatus _VI_FUNC age1960_dcl
    (ViSession  instrumentHandle);


    ViStatus _VI_FUNC age1960_opc_Q
    (ViSession  instrumentHandle,
     ViPBoolean instrumentReady);



    /********************************************************************/
    /*  Agilent standard status functions (modified for multi-registers */
    /********************************************************************/

    ViStatus _VI_FUNC age1960_readStatusByte_Q
    (ViSession  instrumentHandle,
     ViPInt16   statusByte);


    ViStatus _VI_FUNC age1960_stdEvent_Q
    (ViSession  instrumentHandle,
     ViPInt32   stdEventRegister);


    ViStatus _VI_FUNC age1960_operEvent_Q
    (ViSession  instrumentHandle,
     ViInt16    operationName,
     ViPInt32   operationEventRegister);


    ViStatus _VI_FUNC age1960_operCond_Q
    (ViSession  instrumentHandle,
     ViInt16    operationName,
     ViPInt32   operationConditionRegister );


    ViStatus _VI_FUNC age1960_quesEvent_Q
    (ViSession  instrumentHandle,
     ViInt16    questionableName,
     ViPInt32   questionableEventRegister );


    ViStatus _VI_FUNC age1960_quesCond_Q
    (ViSession  instrumentHandle,
     ViInt16    questionableName,
     ViPInt32   questionableConditionRegister );


    ViStatus _VI_FUNC age1960_quesRegisterEnable
    (ViSession  instrumentHandle,
     ViInt16    questionableName,
     ViInt32    quesPosTransition,
     ViInt32    quesNegTransition,
     ViInt32    quesEnableBits);


    ViStatus _VI_FUNC age1960_operRegisterEnable
    (ViSession  instrumentHandle,
     ViInt16    operationName,
     ViInt32    operPosTransition,
     ViInt32    operNegTransition,
     ViInt32    operEnableBits);


    ViStatus _VI_FUNC age1960_stdEventEnable
    (ViSession  instrumentHandle,
     ViInt32    stdEnableBits);


    /***************************************************/
    /*  Agilent standard command passthrough functions */
    /***************************************************/

    ViStatus _VI_FUNC age1960_cmd
    (ViSession  instrumentHandle,
     ViString   sendStringCommand);


    ViStatus _VI_FUNC age1960_cmdString_Q
    (ViSession  instrumentHandle,
     ViString   queryStringCommand,
     ViInt32    stringSize,
     ViPString  stringResult);


    ViStatus _VI_FUNC age1960_cmdInt
    (ViSession  instrumentHandle,
     ViString   sendIntegerCommand,
     ViInt32    sendInteger);


    ViStatus _VI_FUNC age1960_cmdInt16_Q
    (ViSession  instrumentHandle,
     ViString   queryI16Command,
     ViPInt16   i16Result);


    ViStatus _VI_FUNC age1960_cmdInt32_Q
    (ViSession  instrumentHandle,
     ViString   queryI32Command,
     ViPInt32   i32Result);


    ViStatus _VI_FUNC age1960_cmdInt16Arr_Q
    (ViSession  instrumentHandle,
     ViString   queryI16ArrayCommand,
     ViInt32    i16ArraySize,
     ViInt16 _VI_FAR i16ArrayResult[],
     ViPInt32   i16ArrayCount);


    ViStatus _VI_FUNC age1960_cmdInt32Arr_Q
    (ViSession  instrumentHandle,
     ViString   queryI32ArrayCommand,
     ViInt32    i32ArraySize,
     ViInt32 _VI_FAR i32ArrayResult[],
     ViPInt32   i32ArrayCount);


    ViStatus _VI_FUNC age1960_cmdReal
    (ViSession  instrumentHandle,
     ViString   sendRealCommand,
     ViReal64   sendReal);


    ViStatus _VI_FUNC age1960_cmdReal64_Q
    (ViSession  instrumentHandle,
     ViString   queryRealCommand,
     ViPReal64  realResult);


    ViStatus _VI_FUNC age1960_cmdReal64Arr_Q
    (ViSession  instrumentHandle,
     ViString   realArrayCommand,
     ViInt32    realArraySize,
     ViReal64 _VI_FAR realArrayResult[],
     ViPInt32   realArrayCount);



    /* End of Agilent standard declarations */
    /*---------------------------------------------------------------------------*/


    /*****************************************************************************/
    /*  INSTRUMENT SPECIFIC SECTION                                              */
    /*  Constants and function prototypes for instrument specific functions.     */
    /*****************************************************************************/

    /***************************************************/
    /*         Instrument specific constants           */
    /***************************************************/

#define age1960_INSTR_ERROR_ARRAY_TOO_SMALL   	(_VI_ERROR+0x3FFC0D2AL) /* 0xBFFC0D2A */
#define age1960_INSTR_CANNOT_ORIG_NOW         	(_VI_ERROR+0x3FFC0D2BL) /* 0xBFFC0D2B */
#define age1960_INSTR_ERROR_CALL_FAILED       	(_VI_ERROR+0x3FFC0D2CL) /* 0xBFFC0D2C */
#define age1960_INSTR_ERROR_CPTO              	(_VI_ERROR+0x3FFC0D2DL) /* 0xBFFC0D2D */
#define age1960_INSTR_ERROR_INITTO            	(_VI_ERROR+0x3FFC0D2EL) /* 0xBFFC0D2E */
#define age1960_INSTR_ERROR_ORFS_MEAS_COUNT   	(_VI_ERROR+0x3FFC0D2FL) /* 0xBFFC0D2F */
#define age1960_INSTR_ERROR_ARRAY_TOO_LARGE   	(_VI_ERROR+0x3FFC0D30L) /* 0xBFFC0D30 */
#define age1960_INSTR_ERROR_AUTORANGE_FAILED  	(_VI_ERROR+0x3FFC0D31L) /* 0xBFFC0D31 */
#define age1960_INSTR_CANNOT_CHNGBAND_NOW     	(_VI_ERROR+0x3FFC0D32L) /* 0xBFFC0D32 */
#define age1960_INSTR_TOO_MANY_NONCONCURRENT  	(_VI_ERROR+0x3FFC0D33L) /* 0xBFFC0D33 */
#define age1960_INSTR_UNDEFINED_DATA          	(_VI_ERROR+0x3FFC0D34L) /* 0xBFFC0D34 */
#define age1960_INSTR_TA_NOT_AVAILABLE        	(_VI_ERROR+0x3FFC0D35L) /* 0xBFFC0D35 */
#define age1960_INSTR_TA_NOT_SWITCHABLE       	(_VI_ERROR+0x3FFC0D36L) /* 0xBFFC0D36 */
#define age1960_INSTR_TA_NOT_LICENSE          	(_VI_ERROR+0x3FFC0D37L) /* 0xBFFC0D37 */
#define age1960_INSTR_ERROR_NSUP_FUNC         	(_VI_ERROR+0x3FFC0D38L) /* 0xBFFC0D38 */
#define age1960_INSTR_ERROR_FUNC_NOT_SUPPORTED  (_VI_ERROR+0X3FFC0D39L) /* 0XBFFC0D39 */

#define age1960_NOT_A_NUMBER                    9.91E+37	/* IEEE not a number */

#define age1960_NO_RESULT_AVAIL                 1			/* No result available */

#define age1960_INTEGRITY_MIN                   0			/* the min integrity value that can be returned */
#define age1960_INTEGRITY_MAX                  23			/* the max integrity value that can be returned */

#define age1960_ARRAY_MIN                       1			/* min array size is always 1    */
#define age1960_ARRAY_MAX                     500			/* max array size for instrument specific functions is 500 */
#define age1960_CP_TIMEOUT_MIN                  0.0			/* min seconds for a call processing fcn to complete */
#define age1960_CP_TIMEOUT_MAX                120.0			/* max seconds for call processing function to complete */

#define age1960_INIT_TIMEOUT_MIN                0.1			/* min seconds for a meas fcn to complete */
#define age1960_INIT_TIMEOUT_MAX              120.0			/* max seconds for a meas fcn to complete */

#define age1960_MEAS_TIMEOUT_MIN                0.1			/*  min seconds for a measurement timeout */
#define age1960_MEAS_TIMEOUT_MAX              999.9			/* max seconds for a measurement timeout */

#define age1960_MAV_TIMEOUT_MIN                 1			/* min seconds for HP-IB buffer to clear */
#define age1960_MAV_TIMEOUT_MAX                30			/* max seconds for HP-IB buffer to clear */

#define age1960_NUMBER_OF_MEAS_FCNS            10			/* 10 measurement fcns*/

#define age1960_WAIT                           -2			/* Wait for measurement function to complete */
#define age1960_NONEINIT                       -1			/* No measurement function initiated */

#define age1960_AAUDIO                          0			/* Analog Audio Meas Fcn */
#define age1960_BER                             1			/* Bit Error Meas Fcn */
#define age1960_DAUDIO                          2			/* Decoded Audio Meas Fcn */
#define age1960_FBER                            3			/* Fast Bit Error Meas Fcn */
#define age1960_ORFS                            4			/* ORFSpectrum Meas Fcn */
#define age1960_PFER                            5			/* Phase Freq Error Meas Fcn */
#define age1960_PVTIME                          6			/* Power vs Time Meas Fcn */
#define age1960_TXPOWER                         7			/* TX Power Meas Fcn */
#define age1960_DPOWER                          8			/* Dunamic Power Meas Fcn */
#define age1960_IQTUNING                        9			/* IQ Tuning Meas Fcn */

#define age1960_TEST_MODE                       0			/* Test operating mode */
#define age1960_ACELL_MODE                      1			/* Active Cell operating mode */

#define age1960_UNKNOWN_BAND                   -1			/* No band set */
#define age1960_CURRENT_BAND                    0			/* Current band */
#define age1960_PGSM_BAND                       1			/* PGSM band */
#define age1960_EGSM_BAND                       2			/* EGSM band */
#define age1960_DCS1800_BAND                    3			/* DCS 1800 band */
#define age1960_PCS1900_BAND                    4			/* PCS 1900 band */
#define age1960_GSM850_BAND                     5			/* GSM 850 band */

#define age1960_PGSM_MIN_CH                     1			/* PGSM min channel No. */
#define age1960_PGSM_MAX_CH                   124			/* PGSM max channel No. */
#define age1960_EGSM_MIN_CH_1                   0			/* EGSM min 1 channel No. */
#define age1960_EGSM_MAX_CH_1                 124			/* EGSM max 1 channel No. */
#define age1960_EGSM_MIN_CH_2                 975			/* EGSM min 2 channel No. */
#define age1960_EGSM_MAX_CH_2                1023			/* EGSM max 2 channel No. */
#define age1960_DCS1800_MIN_CH                512			/* DCS 1800 min channel No. */
#define age1960_DCS1800_MAX_CH                885			/* DCS 1800 max channel No. */
#define age1960_PCS1900_MIN_CH                512			/* PCS 1900 min channel No. */
#define age1960_PCS1900_MAX_CH                810			/* PCS 1900 max channel No. */
#define age1960_GSM850_MIN_CH				  128	    	/* GSM 850 min channel No. */
#define age1960_GSM850_MAX_CH				  251	    	/* GSM 850 max channel No. */

#define age1960_PGSM_MIN_TXL                    0			/* PGSM min TX Level */
#define age1960_PGSM_MAX_TXL                   31			/* PGSM max TX Level */
#define age1960_EGSM_MIN_TXL                    0			/* EGSM min TX Level */
#define age1960_EGSM_MAX_TXL                   31			/* EGSM max TX Level */
#define age1960_DCS1800_MIN_TXL                 0			/* DCS 1800 min TX Level */
#define age1960_DCS1800_MAX_TXL                31			/* DCS 1800 max TX Level */

#define age1960_PCS1900_MIN_TXL_1               0			/* PCS 1900 Rng 1 min TX Level */
#define age1960_PCS1900_MAX_TXL_1              15			/* PCS 1900 Rng 1 max TX Level */
#define age1960_PCS1900_MIN_TXL_2              30			/* PCS 1900 Rng 2 min TX Level */
#define age1960_PCS1900_MAX_TXL_2              31			/* PCS 1900 Rng 2 max TX Level */

#define age1960_GSM850_MIN_TXL                  0			/* GSM 850 min TX Level */
#define age1960_GSM850_MAX_TXL                 31			/* GSM 850 max TX Level */

#define age1960_TADVANCE_MIN                    0			/* Timing Advance minimum */
#define age1960_TADVANCE_MAX                   63			/* Timing Advance maxinum */