VXIPNP/WinNT/include/age1960.bas


Declare Function age1960_timeOut_Q Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByRef timeout As Long) As Long

Declare Function age1960_errorQueryDetect Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByVal setErrorQueryDetect As Integer) As Long

Declare Function age1960_errorQueryDetect_Q Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByRef errorQueryDetect As Integer) As Long

Declare Function age1960_dcl Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long) As Long

Declare Function age1960_opc_Q Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByRef instrumentReady As Integer) As Long


'        ********************************************************************
'        *  Agilent standard status functions (modified for multi-registers)*
'        ********************************************************************

Declare Function age1960_readStatusByte_Q Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByRef statusByte As Integer) As Long

Declare Function age1960_stdEvent_Q Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByRef stdEventRegister As Long) As Long

Declare Function age1960_operEvent_Q Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByVal operationName As Integer, _
    ByRef operationEventRegister As Long) As Long

Declare Function age1960_operCond_Q Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByVal operationName As Integer, _
    ByRef operationConditionRegister As Long) As Long

Declare Function age1960_quesEvent_Q Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByVal questionableName As Integer, _
    ByRef questionableEventRegister As Long) As Long

Declare Function age1960_quesCond_Q Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByVal questionableName As Integer, _
    ByRef questionableConditionRegister As Long) As Long

Declare Function age1960_quesRegisterEnable Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByVal questionableName As Integer, _
    ByVal quesPosTransition As Long, _
    ByVal quesNegTransition As Long, _
    ByVal quesEnableBits As Long) As Long

Declare Function age1960_operRegisterEnable Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByVal operationName As Integer, _
    ByVal operPosTransition As Long, _
    ByVal operNegTransition As Long, _
    ByVal operEnableBits As Long) As Long

Declare Function age1960_stdEventEnable Lib "age1960_32.dll" _
   (ByVal instrumentHandle As Long, _
    ByVal stdEnableBits As Long) As Long

'        ***************************************************
'        *  Agilent standard command passthrough functions *
'        ***************************************************

Declare Function age1960_cmd Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal sendStringCommand As String) As Long

Declare Function age1960_cmdString_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal queryStringCommand As String, _
     ByVal stringSize As Long, _
     ByVal stringResult As String) As Long

Declare Function age1960_cmdInt Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal sendIntegerCommand As String, _
     ByVal sendInteger As Long) As Long

Declare Function age1960_cmdInt16_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal queryI16Command As String, _
     ByRef i16Result As Integer) As Long

Declare Function age1960_cmdInt32_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal queryI32Command As String, _
     ByRef i32Result As Long) As Long

Declare Function age1960_cmdInt16Arr_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal queryI16ArrayCommand As String, _
     ByVal i16ArraySize As Long, _
     ByRef i16ArrayResult As Integer, _
     ByRef i16ArrayCount As Long) As Long

Declare Function age1960_cmdInt32Arr_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal queryI32ArrayCommand As String, _
     ByVal i32ArraySize As Long, _
     ByRef i32ArrayResult As Long, _
     ByRef i32ArrayCount As Long) As Long

Declare Function age1960_cmdReal Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal sendRealCommand As String, _
     ByVal sendReal As Double) As Long

Declare Function age1960_cmdReal64_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal queryRealCommand As String, _
     ByRef realResult As Double) As Long

Declare Function age1960_cmdReal64Arr_Q Lib "age1960_32.dll" _
    (ByVal instrumentHandle As Long, _
     ByVal realArrayCommand As String, _
     ByVal realArraySize As Long, _
     ByRef realArrayResult As Double, _
     ByRef realArrayCount As Long) As Long


'* End of Agilent standard declarations
'*---------------------------------------------------------------------------*


'*****************************************************************************
'*  INSTRUMENT SPECIFIC SECTION                                              *
'*  Constants and function prototypes for instrument specific functions.     *
'*****************************************************************************

'        ***************************************************
'        *  Instrument specific constants                  *
'        ***************************************************

Global Const age1960_INSTR_ERROR_ARRAY_TOO_SMALL = &HBFFC0D2A
Global Const age1960_INSTR_CANNOT_ORIG_NOW = &HBFFC0D2B
Global Const age1960_INSTR_ERROR_CALL_FAILED = &HBFFC0D2C
Global Const age1960_INSTR_ERROR_CPTO = &HBFFC0D2D
Global Const age1960_INSTR_ERROR_INITTO = &HBFFC0D2E
Global Const age1960_INSTR_ERROR_ORFS_MEAS_COUNT = &HBFFC0D2F
Global Const age1960_INSTR_ERROR_ARRAY_TOO_LARGE = &HBFFC0D30
Global Const age1960_INSTR_ERROR_AUTORANGE_FAILED = &HBFFC0D31
Global Const age1960_INSTR_CANNOT_CHNGBAND_NOW = &HBFFC0D32
Global Const age1960_INSTR_TOO_MANY_NONCONCURRENT = &HBFFC0D33
Global Const age1960_INSTR_UNDEFINED_DATA = &HBFFC0D34
Global Const age1960_INSTR_TA_NOT_AVAILABLE = &HBFFC0D35
Global Const age1960_INSTR_TA_NOT_SWITCHABLE = &HBFFC0D36
Global Const age1960_INSTR_TA_NOT_LICENSE = &HBFFC0D37
Global Const age1960_INSTR_ERROR_NSUP_FUNC = &HBFFC0D38
Global Const age1960_INSTR_ERROR_FUNC_NOT_SUPPORTED = &HBFFC0D39

Global Const age1960_NOT_A_NUMBER = 9.91E+37            ' IEEE not a number

Global Const age1960_NO_RESULT_AVAIL = 1                ' No result available

Global Const age1960_INTEGRITY_MIN = 0                  ' the min integrity value that can be returned
Global Const age1960_INTEGRITY_MAX = 23                 ' the max integrity value that can be returned

Global Const age1960_ARRAY_MIN = 1                      ' min array size is always 1
Global Const age1960_ARRAY_MAX = 500                    ' max array size for instrument specific functions is 500
Global Const age1960_CP_TIMEOUT_MIN = 0#                ' min seconds for a call processing fcn to complete
Global Const age1960_CP_TIMEOUT_MAX = 120#              ' max seconds for call processing function to complete

Global Const age1960_INIT_TIMEOUT_MIN = 0.1             ' min seconds for a meas fcn to complete
Global Const age1960_INIT_TIMEOUT_MAX = 120#            ' max seconds for a meas fcn to complete

Global Const age1960_MEAS_TIMEOUT_MIN = 0.1             '  min seconds for a measurement timeout
Global Const age1960_MEAS_TIMEOUT_MAX = 999.9            ' max seconds for a measurement timeout

Global Const age1960_MAV_TIMEOUT_MIN = 1                ' min seconds for HP-IB buffer to clear
Global Const age1960_MAV_TIMEOUT_MAX = 30               ' max seconds for HP-IB buffer to clear

Global Const age1960_NUMBER_OF_MEAS_FCNS = 10           ' 10 measurement fcns

Global Const age1960_WAIT = -2                          ' Wait for measurement function to complete
Global Const age1960_NONEINIT = -1                      ' No measurement function initiated

Global Const age1960_AAUDIO = 0                         ' Analog Audio Meas Fcn
Global Const age1960_BER = 1                            ' Bit Error Meas Fcn
Global Const age1960_DAUDIO = 2                         ' Decoded Audio Meas Fcn
Global Const age1960_FBER = 3                           ' Fast Bit Error Meas Fcn
Global Const age1960_ORFS = 4                           ' ORFSpectrum Meas Fcn
Global Const age1960_PFER = 5                           ' Phase Freq Error Meas Fcn
Global Const age1960_PVTIME = 6                         ' Power vs Time Meas Fcn
Global Const age1960_TXPOWER = 7                        ' TX Power Meas Fcn
Global Const age1960_DPOWER = 8                         ' Dunamic Power Meas Fcn
Global Const age1960_IQTUNING = 9                       ' IQ Tuning Meas Fcn

Global Const age1960_TEST_MODE = 0                      ' Test operating mode
Global Const age1960_ACELL_MODE = 1                     ' Active Cell operating mode

Global Const age1960_UNKNOWN_BAND = -1                  ' No band set
Global Const age1960_CURRENT_BAND = 0                   ' Current band
Global Const age1960_PGSM_BAND = 1                      ' PGSM band
Global Const age1960_EGSM_BAND = 2                      ' EGSM band
Global Const age1960_DCS1800_BAND = 3                   ' DCS 1800 band
Global Const age1960_PCS1900_BAND = 4                   ' PCS 1900 band
Global Const age1960_GSM850_BAND = 5                    ' GSM 850 band

Global Const age1960_PGSM_MIN_CH = 1                    ' PGSM min channel No.
Global Const age1960_PGSM_MAX_CH = 124                  ' PGSM max channel No.
Global Const age1960_EGSM_MIN_CH_1 = 0                  ' EGSM min 1 channel No.
Global Const age1960_EGSM_MAX_CH_1 = 124                ' EGSM max 1 channel No.
Global Const age1960_EGSM_MIN_CH_2 = 975                ' EGSM min 2 channel No.
Global Const age1960_EGSM_MAX_CH_2 = 1023               ' EGSM max 2 channel No.
Global Const age1960_DCS1800_MIN_CH = 512               ' DCS 1800 min channel No.
Global Const age1960_DCS1800_MAX_CH = 885               ' DCS 1800 max channel No.
Global Const age1960_PCS1900_MIN_CH = 512               ' PCS 1900 min channel No.
Global Const age1960_PCS1900_MAX_CH = 810               ' PCS 1900 max channel No.
Global Const age1960_GSM850_MIN_CH = 128                ' GSM 850 min channel No.
Global Const age1960_GSM850_MAX_CH = 251                ' GSM 850 max channel No.

Global Const age1960_PGSM_MIN_TXL = 0                   ' PGSM min TX Level
Global Const age1960_PGSM_MAX_TXL = 31                  ' PGSM max TX Level
Global Const age1960_EGSM_MIN_TXL = 0                   ' EGSM min TX Level
Global Const age1960_EGSM_MAX_TXL = 31                  ' EGSM max TX Level
Global Const age1960_DCS1800_MIN_TXL = 0                ' DCS 1800 min TX Level
Global Const age1960_DCS1800_MAX_TXL = 31               ' DCS 1800 max TX Level

Global Const age1960_PCS1900_MIN_TXL_1 = 0              ' PCS 1900 Rng 1 min TX Level
Global Const age1960_PCS1900_MAX_TXL_1 = 15             ' PCS 1900 Rng 1 max TX Level
Global Const age1960_PCS1900_MIN_TXL_2 = 30             ' PCS 1900 Rng 2 min TX Level
Global Const age1960_PCS1900_MAX_TXL_2 = 31             ' PCS 1900 Rng 2 max TX Level

Global Const age1960_GSM850_MIN_TXL = 0                 ' GSM 850 min TX Level
Global Const age1960_GSM850_MAX_TXL = 31                ' GSM 850 max TX Level

Global Const age1960_TADVANCE_MIN = 0                   ' Timing Advance minimum
Global Const age1960_TADVANCE_MAX = 63                  ' Timing Advance maxinum
